--- a/frontEnd/src/components/RequestList/RequestList.scss
+++ b/frontEnd/src/components/RequestList/RequestList.scss
@@ -1,9 +1,12 @@
 .request-card--header,
 .request-card--user {
+  margin: 0;
+  padding: 0;
+  margin-top: 0.5rem;
   display: flex;
   align-items: center;
   img {
-    margin-right: 2rem;
+    margin-right: 1.2rem;
     height: 50px;
     width: 50px;
     border-radius: 50%;
