--- a/frontEnd/src/components/RequestList/RequestList.scss
+++ b/frontEnd/src/components/RequestList/RequestList.scss
@@ -1,5 +1,5 @@
-.request-card--header,
-.request-card--user {
+.request-card__header,
+.request-card__user {
   margin: 0;
   padding: 0;
   margin-top: 0.5rem;
@@ -14,11 +14,11 @@
   }
 }
 
-.request-card--left {
+.request-card__left {
   display: flex;
   align-items: center;
 }
 
-.request-card--auction-end {
+.request-card__auction-end {
   font-size: 0.75em;
 }
