--- a/frontEnd/src/components/BidList/BidListItem.scss
+++ b/frontEnd/src/components/BidList/BidListItem.scss
@@ -10,7 +10,7 @@
     justify-content: flex-start;
     align-content: stretch;
     align-items: center;
-    margin: 0.5rem 0;
+    margin: 0;
     padding: 0.8rem;
     &-img {
       flex-grow: 0;
