--- a/frontEnd/src/pages/LoginScreen.scss
+++ b/frontEnd/src/pages/LoginScreen.scss
@@ -12,8 +12,8 @@ ion-item {
 }
 
 ion-button {
-  padding-left: 10% !important;
-  padding-right: 10% !important;
+  width: 100%;
+  height: 34px;
 }
 
 .login-container {
@@ -25,12 +25,13 @@ ion-button {
   position: relative;
   margin: 0.2em;
   padding: 0 15px 0 43px;
+  width: 100%;
   border: none;
-  text-align: left;
-  line-height: 34px;
+  text-align: center;
+  line-height: 35px;
   white-space: nowrap;
   border-radius: 0.5rem;
-  font-size: 12px;
+  font-size: 1rem;
   color: #fff;
 }
 .login-button:before {
@@ -39,7 +40,7 @@ ion-button {
   position: absolute;
   top: 0;
   left: 0;
-  width: 34px;
+  width: 35px;
   height: 100%;
 }
 .login-button:focus {
