--- a/frontEnd/src/components/ProductList/ProductList.scss
+++ b/frontEnd/src/components/ProductList/ProductList.scss
@@ -1,35 +1,35 @@
-.bid-form-modal {
-  &__list-container {
-    padding-top: 2.5%;
-  }
-  &__item-title {
-    margin-bottom: 5%;
-    font-size: 1rem;
-  }
-}
-
 .product-list {
-  padding: 0 2.5%;
-  &-img {
-    margin-right: 1.2rem;
-    height: 50px;
-    width: 50px;
+  padding: 0 2.5% !important;
+  margin: 0 0 1.75rem;
+
+  &__item {
+    margin-right: 1.25rem;
+    width: 80px;
+    overflow: hidden;
+  }
+
+  &__item:last-child {
+    margin-right: 0;
+  }
+
+  &__img {
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border: black 1px solid;
   }
 
-  &-icon {
+  &__icon {
     font-size: 64;
-    margin-right: 1.2rem;
-    height: 50px;
-    width: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border: black 1px solid;
     margin-bottom: 2.5%;
   }
 
-  &-label {
-    max-width: 60px;
+  &__label {
+    max-width: 80px !important;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
