--- a/frontEnd/src/pages/NewRequest.scss
+++ b/frontEnd/src/pages/NewRequest.scss
@@ -1,3 +1,8 @@
-.new-request-container {
-  --padding-top: 5%;
+.new-request__container {
+  // --padding-top: 5%;
+}
+
+.new-request__button {
+  margin: 0 auto;
+  width: 90% !important;
 }
