Add spinner + error components to user components

--- a/frontEnd/src/pages/LoginScreen.scss
+++ b/frontEnd/src/pages/LoginScreen.scss
@@ -74,6 +74,7 @@ ion-item {
 }
 .login-button--google:before {
   border-right: #bb3f30 1px solid;
+  color: #fff;
   background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
 }
 .login-button--google:hover,
