bug fixes & styling

--- a/frontEnd/src/components/Header.scss
+++ b/frontEnd/src/components/Header.scss
@@ -1,7 +1,17 @@
-.logo {
-  margin-left: 15%;
-  font-family: inherit;
-  font-size: 1rem;
-  font-weight: bold;
-  color: #3880ff;
+.header {
+  &__toolbar {
+    &-title {
+      color: #fff;
+      &.md {
+        text-align: right;
+      }
+    }
+    &-logo {
+      margin-left: 15%;
+      font-family: inherit;
+      font-size: 1rem;
+      font-weight: bold;
+      color: #fff;
+    }
+  }
 }
