--- a/frontEnd/src/pages/ActivityFeed.scss
+++ b/frontEnd/src/pages/ActivityFeed.scss
@@ -1,3 +1,8 @@
-.activity-toolbar {
-  --padding-top: 5%;
+.activity {
+  &__toolbar {
+    --padding-top: 5%;
+    --padding-bottom: 2.5%;
+  }
+  &__segment {
+  }
 }
