add gradient color to app

--- a/frontEnd/src/components/Header.scss
+++ b/frontEnd/src/components/Header.scss
@@ -26,3 +26,8 @@
 .ios.header__toolbar {
   padding: 0.5rem 0;
 }
+
+.gradient {
+  color: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
+  background: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
+}
