--- a/frontEnd/src/pages/ProductFormModal.scss
+++ b/frontEnd/src/pages/ProductFormModal.scss
@@ -3,13 +3,48 @@
     --inner-padding-end: 0;
   }
 
-  &__img-img {
-    display: block;
-    height: 200px;
-    object-fit: cover;
+  &__img-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    // height: 200px;
     overflow: hidden;
-    border-radius: 0.5rem 0.5rem 0 0;
+    border-radius: 0.5rem;
+    background: var(--ion-color-light);
+
+    &:before {
+      display: block;
+      content: '';
+      padding-top: 100%;
+    }
   }
+
+  &__img-img {
+    position: absolute;
+    display: block;
+    object-fit: cover;
+    color: var(--ion-color-light-shade);
+    width: 100%;
+    height: 100%;
+  }
+
+  &__img-icon {
+    top: 15%;
+    // bottom: 20%;
+    width: 60%;
+    height: 60%;
+    font-size: 4rem;
+  }
+
+  // &__img-img {
+  //   display: block;
+  //   height: 200px;
+  //   object-fit: cover;
+  //   overflow: hidden;
+  //   border-radius: 0.5rem 0.5rem 0 0;
+  // }
 
   &__img-label {
     transform: none !important;
@@ -17,15 +52,29 @@
   }
 
   &__img-btn {
+    position: absolute;
+    bottom: 5%;
     display: block;
-    margin: 0 0 0.625rem;
+    margin: auto;
+    // margin: 0 0 0.625rem;
     padding: 0 !important;
     font-size: 1rem;
-    width: 100%;
-    --border-radius: 0 0 0.5rem 0.5rem !important;
-    --padding-top: 1rem;
+    width: 90%;
+    // --border-radius: 0 0 0.5rem 0.5rem !important;
+    --padding-top: 1.25rem;
     --padding-bottom: 1.25rem;
   }
+
+  // &__img-btn {
+  //   display: block;
+  //   margin: 0 0 0.625rem;
+  //   padding: 0 !important;
+  //   font-size: 1rem;
+  //   width: 100%;
+  //   --border-radius: 0 0 0.5rem 0.5rem !important;
+  //   --padding-top: 1rem;
+  //   --padding-bottom: 1.25rem;
+  // }
 
   &__btn {
     display: block;
