Bid badge formatting

--- a/frontEnd/src/components/BidList/BidListItem.scss
+++ b/frontEnd/src/components/BidList/BidListItem.scss
@@ -15,8 +15,7 @@
   &__badge {
     border-radius: 0;
     border-bottom-right-radius: 8px;
-    padding-right: 6px;
-    padding-bottom: 6px;
+    padding: 6px;
   }
 
   &__right {
